sas-core/main/default/objects/Case/fields/ML_Booking_Hours_Before_Departure__c.field-meta.xml
<CustomField>
    <fullName>ML_Booking_Hours_Before_Departure__c</fullName>
    <inlineHelpText>Booking lead time before flight departure</inlineHelpText>
    <label>ML Booking Hours Before Departure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>