sas-core/main/default/objects/Case/fields/ML_Claimed_After_Two_Weeks__c.field-meta.xml
<CustomField>
    <fullName>ML_Claimed_After_Two_Weeks__c</fullName>
    <label>ML Claimed After Two Weeks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>