sas-core/main/default/objects/Case/fields/ML_Days_From_Arrival_To_Claim__c.field-meta.xml
<CustomField>
    <fullName>ML_Days_From_Arrival_To_Claim__c</fullName>
    <label>ML Days From Arrival To Claim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>