sas-core/main/default/objects/Case/fields/ML_Delay_Impact_Ratio__c.field-meta.xml
<CustomField>
    <fullName>ML_Delay_Impact_Ratio__c</fullName>
    <inlineHelpText>Delay impact ratio on connecting flights: total delay / scheduled connection time</inlineHelpText>
    <label>ML Delay Impact Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>