sas-core/main/default/objects/Case/fields/ML_Flight_No_Show__c.field-meta.xml
<CustomField>
    <fullName>ML_Flight_No_Show__c</fullName>
    <inlineHelpText>Flight no-show status: Yes/No. Yes for no show.</inlineHelpText>
    <label>ML Flight No-Show</label>
    <length>255</length>
    <type>Text</type>
</CustomField>