sas-core/main/default/objects/Case/fields/ML_Fraud_Label__c.field-meta.xml
<CustomField>
    <fullName>ML_Fraud_Label__c</fullName>
    <description>0 - not able to calculate due to missing value, 1 - potential fraud, 2 - not fraud</description>
    <label>ML Fraud Label</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>