sas-core/main/default/objects/Case/fields/ML_Has_Corporate_Agreement__c.field-meta.xml
<CustomField>
    <fullName>ML_Has_Corporate_Agreement__c</fullName>
    <label>ML Has Corporate Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>