sas-core/main/default/objects/Case/fields/ML_Highest_Historical_EB_Level__c.field-meta.xml
<CustomField>
    <fullName>ML_Highest_Historical_EB_Level__c</fullName>
    <label>ML Highest Historical EB Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>