sas-core/main/default/objects/Case/fields/ML_Refundable_Ticket__c.field-meta.xml
<CustomField>
    <fullName>ML_Refundable_Ticket__c</fullName>
    <inlineHelpText>Ticket refundability: Yes/No. Yes for refundable.</inlineHelpText>
    <label>ML Refundable Ticket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>