sas-core/main/default/objects/Case/fields/ML_Staff_Ticket__c.field-meta.xml
<CustomField>
    <fullName>ML_Staff_Ticket__c</fullName>
    <label>ML Staff Ticket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>