sas-core/main/default/objects/Case/fields/ML_Strike_Related__c.field-meta.xml
<CustomField>
    <fullName>ML_Strike_Related__c</fullName>
    <label>ML Strike-Related</label>
    <length>255</length>
    <type>Text</type>
</CustomField>