sas-core/main/default/objects/Case/fields/ML_Total_Delay__c.field-meta.xml
<CustomField>
    <fullName>ML_Total_Delay__c</fullName>
    <label>ML Total Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>