sas-core/main/default/objects/Case/fields/ML_Whitelisted_Firm__c.field-meta.xml
<CustomField>
    <fullName>ML_Whitelisted_Firm__c</fullName>
    <label>ML Whitelisted Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>