sas-core/main/default/objects/Case/fields/PermissionSetCollectionIDs_Long__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetCollectionIDs_Long__c</fullName>
    <description>PermissionSetCollectionIds for use in the FPS cases. Long text area to allow several entries.</description>
    <label>PermissionSetCollectionIDs</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>