sas-core/main/default/objects/Case/fields/Proactivity_Forced_Hold__c.field-meta.xml
<CustomField>
    <fullName>Proactivity_Forced_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proactivity Forced Hold</label>
    <type>Checkbox</type>
</CustomField>