sas-core/main/default/objects/Case/fields/Refund_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Refund_Contact_Name__c</fullName>
    <formula>IF(ISBLANK(Refund_Request__r.First_Name__c),&quot;&quot;, Refund_Request__r.First_Name__c + &quot; &quot; + Refund_Request__r.Last_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Contact Name</label>
    <type>Text</type>
</CustomField>