sas-core/main/default/objects/Case/fields/Refund_Notes__c.field-meta.xml
<CustomField>
    <fullName>Refund_Notes__c</fullName>
    <label>Refund Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>