sas-core/main/default/objects/Case/fields/Refund_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Refund_Ticket_Number__c</fullName>
    <label>Refund Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>