sas-core/main/default/objects/Case/fields/Registered_Date__c.field-meta.xml
<CustomField>
    <fullName>Registered_Date__c</fullName>
    <description>This field is being used for charge back, to understand when a payment was registered</description>
    <label>Registered Date</label>
    <type>Date</type>
</CustomField>