sas-core/main/default/objects/Case/fields/Short_URL__c.field-meta.xml
<CustomField>
    <fullName>Short_URL__c</fullName>
    <formula>FCS_LatestSurveyInvitation__r.Short_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short URL</label>
    <type>Text</type>
</CustomField>