sas-core/main/default/objects/Case/fields/SSR_Mobility_Device_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>SSR_Mobility_Device_Dimensions__c</fullName>
    <formula>Special_Service_Request__r.Mobility_Device_Dimensions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSR Mobility Device Dimensions</label>
    <type>Text</type>
</CustomField>