sas-core/main/default/objects/Case/fields/SSR_Mobility_Device_Type__c.field-meta.xml
<CustomField>
    <fullName>SSR_Mobility_Device_Type__c</fullName>
    <formula>TEXT(Special_Service_Request__r.Mobility_Device_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSR Mobility Device Type</label>
    <type>Text</type>
</CustomField>