sas-core/main/default/objects/Case/fields/SSR_PNR__c.field-meta.xml
<CustomField>
    <fullName>SSR_PNR__c</fullName>
    <formula>Special_Service_Request__r.PNR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSR PNR</label>
    <type>Text</type>
</CustomField>