sas-core/main/default/objects/Case/fields/SSR_Type__c.field-meta.xml
<CustomField>
    <fullName>SSR_Type__c</fullName>
    <formula>TEXT(Special_Service_Request__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSR Type</label>
    <type>Text</type>
</CustomField>