sas-core/main/default/objects/Case/fields/SSR_Type_Of_Service_Animal__c.field-meta.xml
<CustomField>
    <fullName>SSR_Type_Of_Service_Animal__c</fullName>
    <label>SSR Type Of Service Animal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>