sas-core/main/default/objects/Case/fields/SSR_Type_Of_Special_Assistance__c.field-meta.xml
<CustomField>
    <fullName>SSR_Type_Of_Special_Assistance__c</fullName>
    <formula>TEXT(Special_Service_Request__r.Type_Of_Special_Assistance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSR Type Of Special Assistance</label>
    <type>Text</type>
</CustomField>