sas-core/main/default/objects/Case/fields/SuppliedFirstname__c.field-meta.xml
<CustomField>
    <fullName>SuppliedFirstname__c</fullName>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>