sas-core/main/default/objects/Case/fields/SuppliedLastname__c.field-meta.xml
<CustomField>
    <fullName>SuppliedLastname__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>