sas-core/main/default/objects/Case/recordTypes/Call.recordType-meta.xml
<RecordType>
    <fullName>Call</fullName>
    <active>true</active>
    <businessProcess>Phone</businessProcess>
    <description>For all the cases related to a voice call</description>
    <label>Call</label>
</RecordType>