sas-core/main/default/objects/Case/recordTypes/Chat.recordType-meta.xml
<RecordType>
    <fullName>Chat</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <description>Used to manage all chat related cases</description>
    <label>Chat</label>
</RecordType>