sas-core/main/default/objects/Case/recordTypes/Claim.recordType-meta.xml
<RecordType>
    <fullName>Claim</fullName>
    <active>true</active>
    <businessProcess>Liability</businessProcess>
    <description>Use for claim related cases</description>
    <label>Claim</label>
</RecordType>