sas-core/main/default/objects/Case/recordTypes/Customer_Claim.recordType-meta.xml
<RecordType>
    <fullName>Customer_Claim</fullName>
    <active>true</active>
    <businessProcess>Care</businessProcess>
    <description>Used for Customer Claim related cases</description>
    <label>Customer Claim</label>
</RecordType>