sas-core/main/default/objects/Case/recordTypes/Emergency.recordType-meta.xml
<RecordType>
    <fullName>Emergency</fullName>
    <active>true</active>
    <businessProcess>Care</businessProcess>
    <description>Case record type used in emergency cases.</description>
    <label>Emergency</label>
</RecordType>