sas-core/main/default/objects/Case/recordTypes/FunctionalProductSupport.recordType-meta.xml
<RecordType>
    <fullName>FunctionalProductSupport</fullName>
    <active>true</active>
    <businessProcess>Functional Product Support</businessProcess>
    <description>Use mainly for internal cases regarding salesforce functionality</description>
    <label>Functional Product Support</label>
</RecordType>