sas-core/main/default/objects/Case/recordTypes/Internal_Backoffice.recordType-meta.xml
<RecordType>
    <fullName>Internal_Backoffice</fullName>
    <active>true</active>
    <businessProcess>Internal%2FBackoffice</businessProcess>
    <description>Use cases for Infohub</description>
    <label>Internal/Backoffice</label>
</RecordType>