sas-core/main/default/objects/Case/validationRules/Cannot_not_take_ownership_of_Audit_cases.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_not_take_ownership_of_Audit_cases</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
OR(  TEXT(Status) = &apos;Waiting for Approval&apos;, TEXT(Status) = &apos;Waiting for Control&apos;),  
NOT( $Permission.Cherry_pick_Settlements ),
ISCHANGED( OwnerId ), 
TEXT(Department__c) = &apos;Customer Claim&apos;)</errorConditionFormula>
    <errorMessage>You cannot take ownership of this case</errorMessage>
</ValidationRule>