sas-core/main/default/objects/Case/validationRules/No_old_customer_claims_to_new_queues.validationRule-meta.xml
<ValidationRule>
    <fullName>No_old_customer_claims_to_new_queues</fullName>
    <active>false</active>
    <description>Enforcing that only Customer Claim cases &quot;- expenses&quot; or &quot;- compensation&quot; can go new EU261 and Care Expenses queues.</description>
    <errorConditionFormula>AND(
ISCHANGED( OwnerId ),
OR(
AND(Owner:Queue.QueueName = &apos;Claims - Care Expenses&apos;,NOT( CONTAINS(TEXT(LIA_Claim__r.Customer_Claim_Type__c),&apos;expenses&apos;)))
,
AND(Owner:Queue.QueueName = &apos;Claims - EU261&apos;,NOT( CONTAINS(TEXT(LIA_Claim__r.Customer_Claim_Type__c),&apos;compensation&apos;)))))</errorConditionFormula>
    <errorMessage>You cannot manually assign cases to this queue.</errorMessage>
</ValidationRule>