sas-core/main/default/objects/Case/validationRules/Restrict_user_privileges_for_case_assign.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_user_privileges_for_case_assign</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
AND(
ISCHANGED(OwnerId),
OR(
$Profile.Name = &quot;Business User&quot;,
$Profile.Name = &quot;Vendor&quot;
),
OR(
Owner:Queue.Name = &apos;SAS Automation Queue&apos;,
Owner:User.Username = &apos;sasautomationprocess@sas.se&apos;,
Owner:User.Username = &apos;sasformsautomationprocess@sas.se&apos;
)
),
NOT(ISPICKVAL(Status , &apos;Waiting for Transfer&apos;))
)</errorConditionFormula>
    <errorMessage>Not authorized to assign cases to this user</errorMessage>
</ValidationRule>