sas-core/main/default/objects/Case/listViews/FunctionalProductSupport_Case.listView-meta.xml
<ListView>
    <fullName>FunctionalProductSupport_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Team__c</columns>
    <filterScope>Queue</filterScope>
    <label>Functional Product Support</label>
    <queue>FunctionalProductSupport</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>